--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <main class="container">
             <h1 class="screenreader-only">3 Column Preview Card Component</h1>
             <div class="card sedans">
-                <img src="images/icon-sedans.svg" alt="Sedans icon">
+                <img src="images/icon-sedans.svg" alt="">
                 <h2>Sedans</h2>
                 <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
                 <a href="#" class="btn-card btn-sedans">Learn More</a>
             </div>
             <div class="card SUVs">
-                <img src="images/icon-suvs.svg" alt="SUVs icon">
+                <img src="images/icon-suvs.svg" alt="">
                 <h2>SUVs</h2>
                 <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
                 <a href="#" class="btn-card btn-SUVs">Learn More</a>
             </div>
             <div class="card luxury">
-                <img src="images/icon-luxury.svg" alt="Luxury icon">
+                <img src="images/icon-luxury.svg" alt="">
                 <h2>Luxury</h2>
                 <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
                 <a href="#" class="btn-card btn-luxury">Learn More</a>
